Base Code for New Changes - Demo

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -3,9 +3,9 @@
 
     <string name="app_name">BarPad</string>
     <string name="action_settings">Settings</string>
-    <string name="hello_world">Hello world!</string>
     <string name="desc">Take control of your venue</string>
     <string name="title_activity_count">Count</string>
+    <string name="title_activity_login">Login</string>
     <string name="dummy_button">Dummy Button</string>
     <string name="dummy_content">DUMMY\nCONTENT</string>
     <string name="add">+</string>
